--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                     <p>一款有趣的互动工具，可以生成各种举牌文字动画，用于社交媒体分享和娱乐。</p>
                 </div>
                 </a>
-                <a href="/slt">
+                <a href="https://api.eees.cn/slt">
                 <div class="tool" onclick="playClickSound()">
                     <div class="tool-icon"><i class="fas fa-bullhorn"></i></div>
                     <h3>网站缩略图生成</h3>
