--- a/dsp/index.html
+++ b/dsp/index.html
@@ -14,9 +14,9 @@
     <meta referrerpolicy="no-referrer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聚合短视频去水印 - 亿思博客</title>
-    <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <script src="./assets/FileSaver.js"></script>
-    <script src="./assets/jszip.min.js"></script>
+    <link href="https://cdn.eees.cn/ajax/libs/font-awesome/7.2.0/css/all.min.css" rel="stylesheet">
+    <script src="../assets/FileSaver.js"></script>
+    <script src="../assets/jszip.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
