--- a/dsp/index.html
+++ b/dsp/index.html
@@ -58,7 +58,7 @@
 
     <div class="debug-info" id="debugInfo"></div>
     
-<script src="assets/script.js"></script>
+<script src="../assets/script.js"></script>
 <script src="https://cdn.eees.cn/eees.cn.js"></script>
 <script src="https://cdn.eees.cn/js/wow.min.js"></script>
 <script src="https://cdn.eees.cn/js/time.js"></script>
