--- a/dsp/index.html
+++ b/dsp/index.html
@@ -15,8 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聚合短视频去水印 - 亿思博客</title>
     <link href="https://cdn.eees.cn/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
-    <script src="../assets/FileSaver.js"></script>
-    <script src="../assets/jszip.min.js"></script>
+    <script src="/assets/FileSaver.js"></script>
+    <script src="/assets/jszip.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
@@ -58,7 +58,7 @@
 
     <div class="debug-info" id="debugInfo"></div>
     
-<script src="../assets/script.js"></script>
+<script src="/assets/script.js"></script>
 <script src="https://cdn.eees.cn/eees.cn.js"></script>
 <script src="https://cdn.eees.cn/js/wow.min.js"></script>
 <script src="https://cdn.eees.cn/js/time.js"></script>
